--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+<button id="cycleReset">Reset</button>
 <div class="cycler"></div>
 
 <script src="js/jquery-2.2.1.min.js" type="text/javascript" charset="utf-8"></script>
