WIP get "Go" going

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 
 <button id="cycleReset">Reset</button>
+<button id="cycleGo">Go</button>
 <div class="cycler"></div>
 
 <script src="js/jquery-2.2.1.min.js" type="text/javascript" charset="utf-8"></script>
