split up some files

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div class="cycler"></div>
 
 <script src="js/jquery-2.2.1.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/cyclades.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
