--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <button id="cycleReset">Reset</button>
 <button id="cycleGo">Go</button>
+<button id="floyd">Floyd</button>
 <div class="cycler"></div>
 
 <script src="js/jquery-2.2.1.min.js" type="text/javascript" charset="utf-8"></script>
