better random hare

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<button id="cycleReset">Reset</button>
+<button id="cycleReset">New</button>
 <button id="cycleGo">Go</button>
 <button id="floyd">Floyd</button>
 <div class="cycler"></div>
