starting in on brents

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <button id="cycleReset">New</button>
 <button id="cycleGo">Go</button>
 <button id="floyd">Floyd</button>
+<button id="brent">Brent</button>
 <div class="cycler"></div>
 
 <script src="js/jquery-2.2.1.min.js" type="text/javascript" charset="utf-8"></script>
