--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
 
+<div>
+	https://en.wikipedia.org/wiki/Cycle_detection
+</div>
+<div id="cycleSketch" class="sketch_canvas" data-var="sketch" >&nbsp;</div>
+
+
 <button id="cycleReset">New</button>
 <button id="cycleGo">Go</button>
 <button id="floyd">Floyd</button>
@@ -15,6 +21,9 @@
 
 <script src="js/jquery-2.2.1.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/cyclades.js" type="text/javascript" charset="utf-8"></script>
+<script charset="utf-8" type="text/javascript" src="./js/sketch-json.js"></script>
+<script charset="utf-8" type="text/javascript" src="./js/wsp-min.js"></script>
+<script charset="utf-8" type="text/javascript" src="./js/wsp-runner.js"></script>
 <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
