better cycles to play with

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div>
-	https://en.wikipedia.org/wiki/Cycle_detection
+	<a href="https://en.wikipedia.org/wiki/Cycle_detection">Cycle Detection</a>
 </div>
 <div id="cycleSketch" class="sketch_canvas" data-var="sketch" >&nbsp;</div>
 
