WIP much refactoring
It'll be ugly for a bit here

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 <button id="cycleGo">Go</button>
 <button id="floyd">Floyd</button>
 <button id="brent">Brent</button>
-<div class="cycler"></div>
+<div id="cycler"></div>
 
 <script src="js/jquery-2.2.1.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/cyclades.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/squarecycle.js" type="text/javascript" charset="utf-8"></script>
 <script charset="utf-8" type="text/javascript" src="./js/sketch-json.js"></script>
 <script charset="utf-8" type="text/javascript" src="./js/wsp-min.js"></script>
 <script charset="utf-8" type="text/javascript" src="./js/wsp-runner.js"></script>
