Ok good. Time to start splitting of sketch stuff

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <div>
 	<a href="https://en.wikipedia.org/wiki/Cycle_detection">Cycle Detection</a>
 </div>
-<div id="cycleSketch" class="sketch_canvas" data-var="sketch" >&nbsp;</div>
+<div id="cycleSketch" >&nbsp;</div>
 
 
 <button id="cycleReset">New</button>
-<button id="cycleGo">Go</button>
 <button id="floyd">Floyd</button>
 <button id="brent">Brent</button>
 <div id="cycler"></div>
