--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <script src="js/jquery-2.2.1.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/cyclades.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/sketchcycle.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/squarecycle.js" type="text/javascript" charset="utf-8"></script>
 <script charset="utf-8" type="text/javascript" src="./js/sketch-json.js"></script>
 <script charset="utf-8" type="text/javascript" src="./js/wsp-min.js"></script>
