--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 		</div>
 
 		<div id="introstep2" class="step" data-x="-1000" data-y="-1000">
-			<p>... I couldn't really tell you why they worked. So I need to dig further into it: try to think about it on my own terms,
-			 and maybe play with an implementation.
-			</p>
+			<div class="blurb">
+				<div>... I couldn't really tell you why they worked. So I need to dig further into it: try to think about it on my own terms,
+			 		and maybe play with an implementation.
+		 		</div>
+			</div>
 		</div>
 
 		<div id="introstep3" class="step" data-x="0" data-y="-1500">
@@ -47,7 +49,8 @@
 		</div>
 
 
-		<div id="cyclerstep" class="step" data-x="-800" data-y="-350">
+		<div id="cyclerstep" class="step" data-x="-800" data-y="-450">
+			<p>And here is a different visualization, which I made for no particular reason.</p>
 			<div id="cycler"></div>
 		</div>
 
