open links in new page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="introstep" class="step" data-x="-2000" data-y="-1500">
 			<div class="blurb">
 				<div>Ok I was interested in learning some algorithms. The "Tortoise and hare" Cycle detection algorithms seemed cool,
-				so off to <a href="https://en.wikipedia.org/wiki/Cycle_detection">Wikipedia</a>! Read through that, and I understood.
+				so off to <a href="https://en.wikipedia.org/wiki/Cycle_detection" target="_blank">Wikipedia</a>! Read through that, and I understood.
 				</div>
 				<div>A few days later ...</div>
 			</div>
@@ -32,7 +32,7 @@
 				about: a nice linked list:
 			</p>
 			<div class="sketch_canvas" data-var="llsketch" >&nbsp;</div>
-			<p>Ok it's a <a href="https://en.wikipedia.org/wiki/Linked_list#Singly_linked_list">singly linked list</a>. You've got a pointer to the first node,
+			<p>Ok it's a <a href="https://en.wikipedia.org/wiki/Linked_list#Singly_linked_list" target="_blank">singly linked list</a>. You've got a pointer to the first node,
 				and each node has a pointer to the "next" node (or a sentinel for the end of the list). You can start at the first node, and next your way to the end.
 				Unless: some joker has set one of the "next" back to a previous node, in which case you're stuck in an infinte loop. This is the case the
 				Cycle Detection algorithms detect.
